--- a/Trabalho01/10908/PyBook/10908.ipynb
+++ b/Trabalho01/10908/PyBook/10908.ipynb
@@ -5,8 +5,12 @@
     "colab": {
       "name": "10908.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNBjy2iLMZuFwvh0Yhf9SXR",
+      "collapsed_sections": [
+        "6bBQWsAmIdMS",
+        "Ey1eInhnSiIq",
+        "cYEG1B-DInt9"
+      ],
+      "authorship_tag": "ABX9TyMWpRiwQgGPqF1puTDNpsKI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,6 +99,11 @@
         "        CENT.append([r,c])\n",
         "      \n",
         "      TCases.append([M, N, Q, GRID, CENT])\n",
+        "      #[M:[7], \n",
+        "      # N:[10], \n",
+        "      # Q:[4], \n",
+        "      # GRID:['abbbaaaaaa','','','','','','aaccaaaaaa'], \n",
+        "      # CENT:[[1,2],[2,4],[4,6],[5,2]]]\n",
         "    return (TCases)\n",
         "\n",
         "def exec_input(input):\n",
@@ -146,17 +155,17 @@
         "      if (GRID[(i+C)-0][(j+C)-k] != center): return False\n",
         "    return True   # A CAMADA ESTÁ OK, É FORMADA POR ELEMENTOS IGUAIS AO DO CENTRO.\n",
         "\n",
-        "# if __name__ == '__main__':\n",
-        "#     try:\n",
-        "#       input = read_input()\n",
-        "#       exec_input(input)\n",
+        "if __name__ == '__main__':\n",
+        "    try:\n",
+        "      input = read_input()\n",
+        "      exec_input(input)\n",
         "\n",
-        "#     except EOFError:\n",
-        "#       pass\n",
-        "#     finally:\n",
-        "#       exit(0)\n",
+        "    except EOFError:\n",
+        "      pass\n",
+        "    finally:\n",
+        "      exit(0)\n",
         "    \n",
-        "#     exit(0)"
+        "    exit(0)"
       ],
       "execution_count": null,
       "outputs": []
@@ -350,15 +359,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "PxIVJucwIkQm"
-      },
-      "source": [
-        "###**OUTPUT RESPOSTA**"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "piUXzTqYEkuU"
@@ -538,11 +538,83 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Gc41S-yrCtN5"
+        "id": "w60_JbXm-wo_"
       },
       "source": [
-        "input  = BASE_TCases[2]\n",
-        "output = exec_input(input)"
+        "# ===== Criar codigo sem \"def\" para facilitar o calc da complexidade\n",
+        "if __name__ == '__main__':\n",
+        "  try:\n",
+        "# def exec_input():\n",
+        "    # INPUT\n",
+        "    # The input starts with a line containing a single integer T(<21).\n",
+        "    # Como neste problema o algoritmo não pede para tratar as retrições, \n",
+        "    # tais restrições não foram tratadas para aumentar a efetividade nos teste do JUDGE.\n",
+        "    T = int(input())\n",
+        "    for t in range(T):\n",
+        "    # This is followed by T test cases.\n",
+        "    # The first line of each of them will contain three integers M, N and Q (<21) separated by a space where M, N denotes the dimension of the grid.\n",
+        "        auxImput = input().split()\n",
+        "        M = int(auxImput[0])\n",
+        "        N = int(auxImput[1])\n",
+        "        Q = int(auxImput[2])\n",
+        "        print(f\"{M} {N} {Q}\") ## OUTPUT ##\n",
+        "\n",
+        "        # Next follows M lines each containing N characters.\n",
+        "        GRID = [] #Grid(MxN)\n",
+        "        for m in range(M):\n",
+        "            auxImput = input()\n",
+        "            GRID.append(auxImput)\n",
+        "\n",
+        "        # Finally, there will be Q lines each containing two integers r and c. The value of M and N will be at most 100.\n",
+        "        for q in range(Q):\n",
+        "            auxImput = input().split()\n",
+        "            r, c = 0,0\n",
+        "            r = int(auxImput[0])\n",
+        "            c = int(auxImput[1])\n",
+        "\n",
+        "            auxOutput = 1\n",
+        "            center = GRID[r][c] #Caracter que encontra-se no Centro indicado.\n",
+        "\n",
+        "            # if ((r != (M-1)) and (r != 0) and (c != (N-1)) and (c !=0)):\n",
+        "            if ((r == (M-1)) or (r == 0) or (c == (N-1)) or (c ==0)): #break# SE TAMANHO DA LARGURA DE CADA CAMADA = 1:sqtr(1x1) .\n",
+        "              auxOutput = 1 ## _OUTPUT ##\n",
+        "            else:\n",
+        "              W = max(M, N) # Width: TAMANHO MAX DA LARGURA \n",
+        "              C = 1 # CAMADA = 0(CENTRO), quando o quadrado é formado por apenas 1 elemento.\n",
+        "              for w in range(3, W, 2): # TAMANHO DA LARGURA DE CADA CAMADA. 3:sqtr(3x3), 5:sqtr(5x5), 7:sqtr(7x7),...\n",
+        "                  # (C)CAMADA = 0(CENTRO), quando o quadrado é formado por apenas 1 elemento. E l=1.\n",
+        "                  # (C)CAMADA = 1. Camada depois da CAMADA 0(Centro). O l=3, ou seja, Camada formada com laterais de tamanho 3.\n",
+        "                  # (C)CAMADA = x. Camada x depois da Camada0.\n",
+        "                  # center = GRID[r][c] #Caracter que encontra-se no Centro indicado.\n",
+        "                  \n",
+        "                  #Testa se as Pontas desta nova Camada(Quadrado) estrapolam as dimensões do GRID.\n",
+        "                  if (r+C >= M) or (c+C >= N): break\n",
+        "                  if (r-C < 0) or (c-C < 0): break\n",
+        "\n",
+        "                  #Testa se as Pontas desta nova camada(Quadrado) são do mesmo tipo do Centro(Q)\n",
+        "                  if (GRID[(r-C)][(c-C)] != center): break\n",
+        "                  if (GRID[(r-C)][(c+C)] != center): break\n",
+        "                  if (GRID[(r+C)][(c+C)] != center): break\n",
+        "                  if (GRID[(r+C)][(c-C)] != center): break\n",
+        "                  \n",
+        "                  #Testa o restante do perimetro do quadrado, TESTA DE FORMA DIAGONAL. Em nenhum momento repete-se as celulas(Grid[i,j]). \n",
+        "                  for k in range(1,w-1):\n",
+        "                      if (GRID[(r-C)+k][(c-C)+0] != center): break\n",
+        "                      if (GRID[(r-C)+0][(c-C)+k] != center): break\n",
+        "                      if (GRID[(r+C)-k][(c+C)-0] != center): break\n",
+        "                      if (GRID[(r+C)-0][(c+C)-k] != center): break\n",
+        "                  \n",
+        "                  #SE CHEGAR A ESSE PONTO, A CAMADA ESTÁ OK, É FORMADA POR ELEMENTOS IGUAIS AO DO CENTRO.\n",
+        "                  auxOutput = w ## _OUTPUT ##\n",
+        "                  C+=1 #Vai para a próxima CAMADA.            \n",
+        "            print(auxOutput, end='\\n') ## OUTPUT ##\n",
+        "    # exit(0)\n",
+        "  except EOFError:\n",
+        "    pass\n",
+        "  finally:\n",
+        "    exit(0)\n",
+        "  \n",
+        "  exit(0)"
       ],
       "execution_count": null,
       "outputs": []
@@ -550,32 +622,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2LmLHqBLItJG"
+        "id": "Tr2OvM7Z-zH-"
       },
       "source": [
-        "input"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2r7sXtJjNqGq"
-      },
-      "source": [
-        "output"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "aqJbCXqzNsWW"
-      },
-      "source": [
-        "OUTPUT_TCases[0]"
+        "# ==== outro cod teste\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "  try:\n",
+        "    T = int(input())\n",
+        "    for t in range(T):\n",
+        "        auxImput = input().split()\n",
+        "        M = int(auxImput[0])\n",
+        "        N = int(auxImput[1])\n",
+        "        Q = int(auxImput[2])\n",
+        "        print(f\"{M} {N} {Q}\") ## OUTPUT ##\n",
+        "        GRID = [] #Grid(MxN)\n",
+        "        for m in range(M):\n",
+        "            auxImput = input()\n",
+        "            GRID.append(auxImput)\n",
+        "        for q in range(Q):\n",
+        "            auxImput = input().split()\n",
+        "            r, c = 0,0\n",
+        "            r = int(auxImput[0])\n",
+        "            c = int(auxImput[1])\n",
+        "            auxOutput = 1\n",
+        "            center = GRID[r][c] #Caracter que encontra-se no Centro indicado.\n",
+        "\n",
+        "            if ((r != (M-1)) and (r != 0) and (c != (N-1)) and (c !=0)):\n",
+        "              W = max(M, N) # Width: TAMANHO MAX DA LARGURA \n",
+        "              C = 1 # CAMADA = 0(CENTRO), quando o quadrado é formado por apenas 1 elemento.\n",
+        "              for w in range(3, W, 2): # TAMANHO DA LARGURA DE CADA CAMADA. 3:sqtr(3x3), 5:sqtr(5x5), 7:sqtr(7x7),...\n",
+        "                  if (r+C >= M) or (c+C >= N): break\n",
+        "                  if (r-C < 0) or (c-C < 0): break\n",
+        "                  if (GRID[(r-C)][(c-C)] != center): break\n",
+        "                  if (GRID[(r-C)][(c+C)] != center): break\n",
+        "                  if (GRID[(r+C)][(c+C)] != center): break\n",
+        "                  if (GRID[(r+C)][(c-C)] != center): break\n",
+        "                  for k in range(1,w-1):\n",
+        "                      if (GRID[(r-C)+k][(c-C)+0] != center): break\n",
+        "                      if (GRID[(r-C)+0][(c-C)+k] != center): break\n",
+        "                      if (GRID[(r+C)-k][(c+C)-0] != center): break\n",
+        "                      if (GRID[(r+C)-0][(c+C)-k] != center): break\n",
+        "                  auxOutput = w ## _OUTPUT ##\n",
+        "                  C+=1 #Vai para a próxima CAMADA.            \n",
+        "            print(auxOutput, end='\\n') ## OUTPUT ##\n",
+        "  except EOFError:\n",
+        "    pass\n",
+        "  finally:\n",
+        "    exit(0)\n",
+        "  \n",
+        "  exit(0)"
       ],
       "execution_count": null,
       "outputs": []
