--- a/Trabalho01/00628/PyBook/00628.ipynb
+++ b/Trabalho01/00628/PyBook/00628.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "eTNVeuo48DEU"
       ],
-      "authorship_tag": "ABX9TyNjAhc2Xtri/Qxbo6UXLz8q",
+      "authorship_tag": "ABX9TyMKbMnfP9TwBxWP7sGqz2Z5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,7 +106,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NgLj6UTNUT3L",
-        "outputId": "114b1653-f52d-4fb4-c3c7-b4f9bc222c21"
+        "outputId": "cfcf81d5-5975-4883-cd46-c0d8279e1f13"
       },
       "source": [
         "def exec_input(listaRules, output, pos):\n",
@@ -156,15 +156,70 @@
         "\n",
         "   exit(0)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "2\n",
+            "AA\n",
+            "BB\n",
+            "1\n",
+            "--\n",
+            "#0#\n",
+            "AA0AA\n",
+            "AA0BB\n",
+            "AA1AA\n",
+            "AA1BB\n",
+            "AA2AA\n",
+            "AA2BB\n",
+            "AA3AA\n",
+            "AA3BB\n",
+            "AA4AA\n",
+            "AA4BB\n",
+            "AA5AA\n",
+            "AA5BB\n",
+            "AA6AA\n",
+            "AA6BB\n",
+            "AA7AA\n",
+            "AA7BB\n",
+            "AA8AA\n",
+            "AA8BB\n",
+            "AA9AA\n",
+            "AA9BB\n",
+            "BB0AA\n",
+            "BB0BB\n",
+            "BB1AA\n",
+            "BB1BB\n",
+            "BB2AA\n",
+            "BB2BB\n",
+            "BB3AA\n",
+            "BB3BB\n",
+            "BB4AA\n",
+            "BB4BB\n",
+            "BB5AA\n",
+            "BB5BB\n",
+            "BB6AA\n",
+            "BB6BB\n",
+            "BB7AA\n",
+            "BB7BB\n",
+            "BB8AA\n",
+            "BB8BB\n",
+            "BB9AA\n",
+            "BB9BB\n",
             "\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cQTX9d-V7_BZ"
+      },
+      "source": [
+        "### **TESTES**"
       ]
     },
     {
@@ -173,6 +228,7 @@
         "id": "I_sj-4MO6Xk0"
       },
       "source": [
+        "# ===== Tentativa de construção de código sem recursão para uma melhor analise na complexidade.\n",
         "def read_input():\n",
         "    # INPUT\n",
         "    listInput=[]\n",
@@ -226,15 +282,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "cQTX9d-V7_BZ"
-      },
-      "source": [
-        "### **TESTES**"
-      ]
     },
     {
       "cell_type": "code",
